[fix] make responsive button visible

--- a/oscar/static/css/style.css
+++ b/oscar/static/css/style.css
@@ -22,3 +22,7 @@
     text-decoration: none;
     background-color: white;
 }
+
+.navbar-inverse .navbar-toggle {
+    background-color: #F58025;
+}
